EPAD8-524: Fix z-index issues with button groups

--- a/services/drupal/web/themes/epa_theme/source/_patterns/05-components/button-group/_button-group.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/05-components/button-group/_button-group.scss
@@ -27,10 +27,13 @@
     border-width: 0 1px;
   }
 
-  &:focus-within,
-  &:hover,
   &.is-active {
     z-index: 1;
+  }
+
+  &:focus-within,
+  &:hover {
+    z-index: 2;
   }
 
   .button-group__link {
